k8-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: beeper-frontend
  namespace: default
  labels:
    app: beeper-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: beeper-frontend
  template:
    metadata:
      labels:
        app: beeper-frontend
    spec:
      containers:
        - name: beeper-frontend
          image: localhost:32000/beeper-frontend:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
