k8-service.yml
# k8 deployment service
apiVersion: v1
kind: Service
metadata:
  name: beeper-frontend
  namespace: default
spec:
  selector:
    app: beeper-frontend
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 3000
  type: ClusterIP
