k8-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: beeper-frontend
  namespace: default
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    acme.cert-manager.io/http01-edit-in-place: "true"
  labels:
    app: beeper-frontend
spec:
  ingressClassName: nginx
  rules:
    - host: beeper.instinct.is
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: beeper-frontend
                port:
                  number: 8080
  tls:
    - hosts:
        - beeper.instinct.is
      secretName: beeper-frontend-tls
